include_directories("./include" "../include" "../../src/include" "../src/include")
add_library(woof_caplets woofc-caplets.c)
target_link_libraries(woof_caplets PUBLIC woof)
target_include_directories(woof_caplets PRIVATE "." "../../include")
add_executable(woofc-init-principal woofc-init-principal.c)
target_link_libraries(woofc-init-principal PRIVATE woof_caplets woof crypto dl)
target_include_directories(woofc-init-principal PRIVATE ../include)
add_executable(woofc-print-cap woofc-print-cap.c)
target_link_libraries(woofc-print-cap PRIVATE woof_caplets woof crypto dl)
target_include_directories(woofc-print-cap PRIVATE ../include)
